Squashed commit of the following:
commit 4050f825fcfe08f2c0e523f9657d1a7a2e2206b5
Author: a256b <arielb02965@gmail.com>
Date:   Mon May 19 17:54:27 2025 -0300

    Mejoras de listados

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="noche">#030303</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="oro">#EFBF04</color>
 </resources>
