feat: Destacar torneos como TextView

--- a/app/src/main/res/layout/item_torneo.xml
+++ b/app/src/main/res/layout/item_torneo.xml
@@ -47,6 +47,20 @@
                 android:ellipsize="end" />
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/imgEstrella"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/estrella"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_star" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
