--- a/app/src/main/res/layout/fragment_torneo_detalle.xml
+++ b/app/src/main/res/layout/fragment_torneo_detalle.xml
@@ -1,81 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/product_name"
+            android:id="@+id/nombre_torneo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Torneo Ciudad deTrelew"
+            android:layout_marginTop="12dp"
             android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:text="Nombre del Torneo"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/product_image"
+            android:id="@+id/iv_torneo"
             android:layout_width="358dp"
             android:layout_height="318dp"
             android:layout_marginTop="32dp"
             android:scaleType="centerCrop"
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/logo_caballo_negro"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_name" />
+            />
 
         <TextView
-            android:id="@+id/product_description5"
+            android:id="@+id/tv_fecha_inicio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-black"
-            android:text="Viernes 10 de Julio de 2025"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_image" />
+            android:layout_gravity="center_horizontal"
+            tools:text="10 de Julio de 2025"
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/product_description"
+            android:id="@+id/tv_fecha_fin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif-black"
+            android:layout_gravity="center_horizontal"
+            tools:text="11 de Julio de 2025"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tv_descripcion"
             android:layout_width="360dp"
             android:layout_height="65dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="24dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan est non tortor efficitur, vel blandit erat tincidunt. Aenean hendrerit sem vitae lectus facilisis sagittis lacinia a tellus. "
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_description5" />
+            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan est non tortor efficitur, vel blandit erat tincidunt. Aenean hendrerit sem vitae lectus facilisis sagittis lacinia a tellus. " />
 
         <Button
-            android:id="@+id/add_to_cart_button"
+            android:id="@+id/btn_ver_partidas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ver partidas"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_description" />
+            android:layout_gravity="center_horizontal"
+            android:text="Ver partidas" />
 
         <Button
-            android:id="@+id/add_to_cart_button2"
+            android:id="@+id/btn_inscribirse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inscribirse"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_to_cart_button"
-            app:layout_constraintVertical_bias="0.0" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_gravity="center_horizontal"
+            android:text="Inscribirse" />
+    </LinearLayout>
 </ScrollView>
