--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nav_home"
         android:name="com.example.apptorneosajedrez.ui.home.HomeFragment"
         android:label="@string/menu_inicio"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_nav_home_to_detalleTorneoFragment"
             app:destination="@id/detalleTorneoFragment" />
@@ -19,7 +19,7 @@
         android:id="@+id/nav_torneos"
         android:name="com.example.apptorneosajedrez.ui.torneos.TorneosFragment"
         android:label="@string/menu_torneos"
-        tools:layout="@layout/fragment_torneos" >
+        tools:layout="@layout/fragment_torneos">
         <action
             android:id="@+id/action_nav_torneos_to_nuevoTorneoFragment"
             app:destination="@id/detalleTorneoFragment" />
@@ -36,10 +36,19 @@
         android:name="com.example.apptorneosajedrez.ui.inscripciones.InscripcionesFragment"
         android:label="@string/menu_inscripciones"
         tools:layout="@layout/fragment_inscripciones" />
+
+    <fragment
+        android:id="@+id/nav_mapa"
+        android:name="com.example.apptorneosajedrez.ui.mapa.MapaFragment"
+        android:label="@string/detalle_torneo"
+        tools:layout="@layout/fragment_mapa" />
+
     <fragment
         android:id="@+id/detalleTorneoFragment"
         android:name="com.example.apptorneosajedrez.ui.torneos.TorneoDetalleFragment"
         android:label="@string/detalle_torneo"
         tools:layout="@layout/fragment_torneo_detalle" />
+
+
 
 </navigation>
