--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,7 +40,7 @@
     <fragment
         android:id="@+id/nav_mapa"
         android:name="com.example.apptorneosajedrez.ui.mapa.MapaFragment"
-        android:label="@string/detalle_torneo"
+        android:label="@string/menu_mapa"
         tools:layout="@layout/fragment_mapa" />
 
     <fragment
