--- a/app/src/main/res/layout/dialog_agregar_marcador.xml
+++ b/app/src/main/res/layout/dialog_agregar_marcador.xml
@@ -14,4 +14,11 @@
         android:inputType="textPersonName"
         android:importantForAutofill="no"
         android:autofillHints="" />
+
+    <Spinner
+        android:id="@+id/spinnerCategoria"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown" />
+
 </LinearLayout>
