--- a/app/src/main/res/layout/item_jugador.xml
+++ b/app/src/main/res/layout/item_jugador.xml
@@ -1,10 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
     android:layout_marginHorizontal="8dp"
+    android:layout_marginBottom="8dp"
     android:elevation="4dp"
     android:padding="16dp"
     android:foreground="?android:attr/selectableItemBackground"
@@ -18,32 +19,51 @@
             android:id="@+id/imgTarjetaJugador"
             android:layout_width="64dp"
             android:layout_height="64dp"
+            android:contentDescription="Imagen del jugador"
             app:srcCompat="@drawable/ic_jugador"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/contenedorTexto"
+        <TextView
+            android:id="@+id/textNombreJugador"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:text="Nombre del jugador"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:maxLines="2"
+            android:ellipsize="end"
             app:layout_constraintStart_toEndOf="@id/imgTarjetaJugador"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/imgTarjetaJugador"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="8dp" />
+
+        <LinearLayout
+            android:id="@+id/contenedorBotones"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/textNombreJugador"
+            app:layout_constraintStart_toEndOf="@id/imgTarjetaJugador"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp">
 
-            <TextView
-                android:id="@+id/textNombreJugador"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnAceptar"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nombre del jugador"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:maxLines="2"
-                android:ellipsize="end" />
+                android:text="Aceptar"
+                android:layout_marginEnd="8dp" />
+
+            <Button
+                android:id="@+id/btnRechazar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rechazar" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
