--- a/app/src/main/res/layout/item_jugador.xml
+++ b/app/src/main/res/layout/item_jugador.xml
@@ -62,7 +62,8 @@
                 android:id="@+id/btnRechazar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rechazar" />
+                android:text="Rechazar"
+                android:backgroundTint="@color/rojo"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
