feat: agregar botón de login con Google
Se agrega el botón para iniciar sesión con una cuenta de Google en la pantalla de login. Se incluyen los íconos y recursos necesarios.

Además, se ajusta el layout de las pantallas de registro y login y se actualiza el texto del botón para crear una cuenta.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
+        android:layout_width="28mm"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="16dp"
@@ -60,32 +60,45 @@
 
         />
 
+    <Button
+        android:id="@+id/btn_login_google"
+        android:layout_width="35mm"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginTop="10dp"
+        android:enabled="false"
+        android:text="@string/login_with_google"
+        android:drawableLeft="@drawable/common_google_signin_btn_icon_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+
     <ProgressBar
         android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="64dp"
         android:layout_marginBottom="64dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/password"
         app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerNow"
         app:layout_constraintVertical_bias="0.3" />
 
     <TextView
         android:id="@+id/registerNow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/click_to_register"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
