--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="28mm"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="16dp"
@@ -55,20 +55,16 @@
         android:text="@string/action_sign_in_short"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-
-
-        />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
         android:id="@+id/btn_login_google"
-        android:layout_width="35mm"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="10dp"
-        android:enabled="false"
+        android:drawableLeft="@drawable/googleg_standard_color_18"
         android:text="@string/login_with_google"
-        android:drawableLeft="@drawable/common_google_signin_btn_icon_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
