--- a/app/src/main/res/layout/fragment_torneo_detalle.xml
+++ b/app/src/main/res/layout/fragment_torneo_detalle.xml
@@ -97,5 +97,13 @@
             android:layout_gravity="center_horizontal"
             android:text="Ver partidas" />
 
+        <Button
+            android:id="@+id/btnVerFixture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ver fixture"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"/>
+
     </LinearLayout>
 </ScrollView>
